# notification_with_kafka_poc

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/: compose.yaml
config/app/: app.env  service.Dockerfile
config/kafka/: kafka.env
config/postgres/: postgres.env
config/vault/: vault.env
src/core/: admin.py  asgi.py  models.py  settings.py  urls.py  wsgi.py
src/notifications/: admin.py  manage.py  models.py
src/notifications/migrations/: 0001_initial.py
src/notifications/notifications/: settings.py  urls.py
